--- a/frontend/components/CloudProviders.module.css
+++ b/frontend/components/CloudProviders.module.css
@@ -5,6 +5,8 @@
   background: none;
   display: flex;
   align-items: center;
+  border: 1px solid #d8d7d7;
+  border-radius: 4px;
 }
 
 .image {
@@ -12,14 +14,14 @@
   margin: 0.5rem 0.8rem;
 }
 
-.name {
-  padding: 1rem;
-  font-size: 0.9rem;
-}
-
 .list {
   margin: 0;
-  padding: 0;
+  margin-top: 2rem;
+  padding: 0.3rem;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.items {
+  margin: 0 1.3rem 1.3rem 0;
 }
