--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Montserrat, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -17,4 +16,9 @@ ul {
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  font-family: Montserrat, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  cursor: pointer;
 }
