style: enhance the CSS in mobile-first mode

--- a/frontend/components/clouds/Cloud.module.css
+++ b/frontend/components/clouds/Cloud.module.css
@@ -15,3 +15,12 @@
 .cloudDescription {
   font-size: 12px;
 }
+
+@media (min-width: 1000px) {
+  .cloudName {
+    margin-bottom: 0.8rem;
+  }
+  .cloud {
+    padding: 1.3rem;
+  }
+}
