--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,3 +1,41 @@
 .container {
-  padding: 0 1rem;
+  padding: 0 1.4rem;
+}
+
+.main {
+  width: 100%;
+  max-width: 1000px;
+}
+
+.title {
+  font-weight: 600;
+  margin-bottom: 2.5rem;
+}
+
+@media (min-width: 400px) {
+  .container {
+    padding: 0 1.9rem;
+  }
+}
+
+@media (min-width: 600px) {
+  .container {
+    padding: 0 2.5rem;
+  }
+}
+
+@media (min-width: 800px) {
+  .container {
+    padding: 0 3.5rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+  .title {
+    margin-bottom: 3.2rem;
+  }
 }
